--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Babel plugin to auto-generate Reason bindings from JavaScript+Flow annotated code.",
   "repository": "jchavarri/genBindings",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "better-log": "^1.3.1"
