--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "repository": "jchavarri/genBindings",
   "license": "MIT",
   "main": "src/index.js",
+  "scripts": {
+    "build": "bsb -make-world",
+    "start": "bsb -make-world -w",
+    "clean": "bsb -clean-world",
+    "prepublish": "yarn run test",
+    "release": "babel src --out-dir dist",
+    "test": "yarn run build && node test",
+    "watch": "node test --watch"
+  },
   "dependencies": {
+    "@glennsl/bs-json": "^3.0.0",
     "babel-runtime": "^6.23.0",
     "better-log": "^1.3.1"
   },
@@ -16,17 +26,12 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.3.13",
+    "bs-platform": "^4.0.5",
     "chalk": "^1.1.0",
     "clear": "0.0.1",
     "diff": "^3.2.0",
     "flow-bin": "^0.82.0",
     "watch": "^1.0.1"
-  },
-  "scripts": {
-    "release": "babel src --out-dir dist",
-    "test": "node test",
-    "watch": "node test --watch",
-    "prepublish": "npm test && npm run release"
   },
   "keywords": [
     "babel-plugin",
