--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^1.1.0",
     "clear": "0.0.1",
     "diff": "^3.2.0",
+    "eslint": "^5.7.0",
     "flow-bin": "^0.83.0",
     "watch": "^1.0.1"
   },
